[package]
name = "spel-katalog"
version = "0.1.0"
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
color-eyre.workspace = true
derive_more = { workspace = true, features = ["from", "is_variant", "display", "into_iterator", "as_ref", "deref", "into", "deref_mut"] }
env_logger.workspace = true
iced = { workspace = true, features = ["tokio", "lazy", "image", "advanced"] }
image.workspace = true
itertools.workspace = true
log = { workspace = true, features = ["max_level_debug", "release_max_level_info"] }
mlua = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
paste.workspace = true
rayon.workspace = true
regex.workspace = true
rfd = { workspace = true, features = ["xdg-portal","tokio"] }
rustc-hash.workspace = true
rustix = { workspace = true, features = ["process"] }
serde = { workspace = true, features = ["derive"] }
shell-words.workspace = true
spel-katalog-batch.workspace = true
spel-katalog-common.workspace = true
spel-katalog-games.workspace = true
spel-katalog-info.workspace = true
spel-katalog-lua.workspace = true
spel-katalog-settings.workspace = true
spel-katalog-sink.workspace = true
spel-katalog-terminal.workspace = true
strsim.workspace = true
tap.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["parking_lot"] }
tokio-stream = { workspace = true, features = ["time"] }
toml.workspace = true
yaml-rust2.workspace = true

[build-dependencies]
spel-katalog-build.workspace = true

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
allow_attributes = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
future_not_send = "warn"
