[package]
name = "spel-katalog-reflect-derive-lib"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true, features = ["clone-impls", "parsing", "printing", "extra-traits"] }
quote.workspace = true
proc-macro2.workspace = true
convert_case.workspace = true
rustc-hash.workspace = true
