[package]
name = "spel-katalog-formats"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["clock", "std"] }
derive_more = { workspace = true, features = ["is_variant", "display", "from", "into", "deref", "deref_mut", "as_ref"] }
image.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
strum = { workspace = true, features = ["derive"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["serde"] }
yaml-rust2.workspace = true

[lints]
workspace = true
