[package]
name = "spel-katalog-native"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
bytes.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut", "as_ref", "from", "into"] }
flate2.workspace = true
flume.workspace = true
image.workspace = true
log.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
rusqlite = { workspace = true, features = ["uuid"] }
smol.workspace = true
spel-katalog-formats.workspace = true
tap.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
